[package]
name = "deployerd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "*", features = ["derive"]}
log = "*"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-std = "*"
bytes = "*"
hostname = "*"
serde_json = "*"
env_logger = "*"
tar = "*"
flate2 = "*"